Mysql secret fix error with new version + api

--- a/secrets/mysql.with.secrets.yml
+++ b/secrets/mysql.with.secrets.yml
@@ -2,15 +2,20 @@ version: '3.1'
 
 services:
     mysql:
-        image: mysql
+        image: mysql:latest
         environment: 
             MYSQL_USER: wordpress
             MYSQL_DATABASE: wordpress
-            MYSQL_ROOT_PASSWORD_FILE: "/run/secrets/root_pass"
+            MYSQL_PASSWORD_FILE: "/run/secrets/mysql_root_password"
+            MYSQL_ROOT_PASSWORD_FILE: "/run/secrets/mysql_root_password"
         secrets:
-            - source: root_pass_v2
-              target: root_pass
+            - source: password
+              target: mysql_root_password
         deploy:
             placement:
                 constraints:
                     - node.role==manager
+secrets:
+    password:
+        external:
+            name: mysql_root_password
