--- a/services/apis.yml
+++ b/services/apis.yml
@@ -1,15 +1,16 @@
 version: '3.1'
-
 services:
-    customer:
-        image: swarmgs/customer
-        deploy:
-            replicas: 5
-    balance:
-        image: swarmgs/balance
-        ports:
-            - "5000:3000"
-        environment:
-            MYWEB_CUSTOMER_API: "customer:3000"
-        deploy:
-            replicas: 2
+ customer:
+  image: swarmgs/customer
+  deploy:
+   mode: replicated
+   replicas: 3
+ balance:
+  image: swarmgs/balance
+  ports:
+   - "5000:3000"
+  environment:
+   - MYWEB_CUSTOMER_API=customer:3000
+  deploy:
+   mode: replicated
+   replicas: 3
